Move scroll-to-top button left to avoid Chatbase overlap

--- a/css/style.css
+++ b/css/style.css
@@ -1247,7 +1247,7 @@ p {
 .scroll-top {
   position: fixed;
   bottom: 30px;
-  right: 30px;
+  right: 100px;
   width: 48px;
   height: 48px;
   background: var(--gradient-teal);
